[package]
name = "rpds"
description = "Persistent data structures with structural sharing"
version = "0.12.1-pre"
authors = ["Diogo Sousa <diogogsousa@gmail.com>"]

edition = "2021"
rust-version = "1.56.0"

homepage = "https://github.com/orium/rpds"
repository = "https://github.com/orium/rpds"
documentation = "https://docs.rs/rpds"
readme = "README.md"

keywords = [
    "data-structure",
    "data-structures",
    "persistent",
    "immutable",
    "no_std"
]
categories = [
    "data-structures",
]

license = "MPL-2.0"

# What to include when packaging.
include = [
    "/src/**/*.rs",
    "/benches/**/*.rs",
    "/Cargo.toml",
    "/LICENSE.md",
    "/README.md",
    "/release-notes.md",
]

[badges]
codecov = { repository = "orium/rpds", branch = "master", service = "github" }

[dependencies]
archery = { version = "0.4.0", default-features = false }
serde = { version = "1.0.139", optional = true, default-features = false }


[patch.crates-io]
archery = { git = "https://github.com/stevefan1999-personal/archery", branch = "patch-arc", package = "archery" }

[dev-dependencies]
criterion = "0.3.6"
rand = "0.8.5"
# Needed to test serde:
bincode = "1.3.3"
pretty_assertions = "1.2.1"
static_assertions = "1.1.0"

[features]
default = ["std"]
fatal-warnings = []
std = []

[package.metadata.docs.rs]
features = ["serde"]

[[bench]]
name = "std_linked_list"
harness = false

[[bench]]
name = "rpds_list"
harness = false

[[bench]]
name = "rpds_list_sync"
harness = false

[[bench]]
name = "std_vec"
harness = false

[[bench]]
name = "rpds_queue"
harness = false

[[bench]]
name = "rpds_queue_sync"
harness = false

[[bench]]
name = "std_vec_deque"
harness = false

[[bench]]
name = "rpds_vector"
harness = false

[[bench]]
name = "rpds_vector_sync"
harness = false

[[bench]]
name = "std_hash_map"
harness = false

[[bench]]
name = "rpds_hash_trie_map"
harness = false

[[bench]]
name = "rpds_hash_trie_map_sync"
harness = false

[[bench]]
name = "std_btree_map"
harness = false

[[bench]]
name = "rpds_red_black_tree_map"
harness = false

[[bench]]
name = "rpds_red_black_tree_map_sync"
harness = false
